--- a/2014/styles/partials/_section_speakers.scss
+++ b/2014/styles/partials/_section_speakers.scss
@@ -18,6 +18,9 @@
     &:nth-child(even) {
       margin-top: 4em;
     }
+    &.speaker-last-item {
+      margin-right: 30%;
+    }
   }
 }
 
